# db-cli

./: README.md  pyproject.toml
src/db_cli/: __init__.py  __main__.py  cli.py  data.py  fetch.py  format.py  picker.py
